CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_emplmt_info_hist__x/sfrosit_t_indiv_emplmt_info_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_indiv_emplmt_info_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_indiv_emplmt_info_hist</externalName>
    <label>Employment Information History</label>
    <pluralLabel>Employment Information History</pluralLabel>
</CustomObject>