CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_emplmt_info_hist__x/fields/cde_type_info_emplmt__c.field-meta.xml
<CustomField>
    <fullName>cde_type_info_emplmt__c</fullName>
    <description>cde_type_info_emplmt</description>
    <externalDeveloperName>cde_type_info_emplmt</externalDeveloperName>
    <label>Employment Information Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>