CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_emplmt_info_hist__x/fields/idn_emplmt_indiv__c.field-meta.xml
<CustomField>
    <fullName>idn_emplmt_indiv__c</fullName>
    <description>idn_emplmt_indiv</description>
    <externalDeveloperName>idn_emplmt_indiv</externalDeveloperName>
    <label>Employment ID</label>
    <length>50</length>
    <referenceTargetField>T_INDIV_EMPLMT_INFO__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_INDIV_EMPLMT_INFO__c</referenceTo>
    <relationshipLabel>Employment Information Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_indiv_emplmt_info_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>