CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_emplmt_info_hist__x/fields/idn_emplmt_indiv_info__c.field-meta.xml
<CustomField>
    <fullName>idn_emplmt_indiv_info__c</fullName>
    <description>idn_emplmt_indiv_info</description>
    <externalDeveloperName>idn_emplmt_indiv_info</externalDeveloperName>
    <label>Employment individual Information ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>