CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_emplmt_info_hist__x/fields/idn_emplmt_indiv_info_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_emplmt_indiv_info_hist__c</fullName>
    <description>idn_emplmt_indiv_info_hist</description>
    <externalDeveloperName>idn_emplmt_indiv_info_hist</externalDeveloperName>
    <label>Employment indiv Inform salesforce ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>