CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_emplmt_info_hist__x/fields/nbr_seq_info_emplmt__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_info_emplmt__c</fullName>
    <description>nbr_seq_info_emplmt</description>
    <externalDeveloperName>nbr_seq_info_emplmt</externalDeveloperName>
    <label>Employment Information Sequence Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>